refactor of about

--- a/frontend/csyllabus/src/app/components/about/about.component.html
+++ b/frontend/csyllabus/src/app/components/about/about.component.html
@@ -1,74 +1,70 @@
 
 
 <div class="intro-content">
-<div class="col-md-4">
-    <mat-card class="transparent">
-
-        <h1 style="margin:30px;color:rgb(47, 75, 131);">Our Vision</h1>
-<p style="text-align: justify">
-        Our application will be used to help the students choose courses. For that, the student will be able to choose
-        his home university and if he wants, his wanted destination (via city, country or faculty name), plus the
-        courses he wants to select. He will be able to select them by typing keywords that represent the courses. Then
-        the application will analyze his input and match it with input data from syllabuses to find him suitable
-        faculties and courses.
-        Our vision besides data gathering and analysis, is to add a community so that students can see feedback from
-        previous students at the proposed universities and maybe contact them to have more informations. But also we
-        would like to introduce to the student what he can see in the chosen city, the night life, the students’
-        occupations, etc
-</p>
-    </mat-card>
-</div>
-
-
-<div class="col-md-4 " style="margin-top: -100px;">
-    <mat-card class="transparent">
-             <h1 style="margin:30px;color:rgb(47, 75, 131);">Intro</h1>
-<p style="text-align: justify">
-
-        CSyllabus is imagined as a web platform which should ease up process of finding and comparing
-        courses on domestic and foreign faculties. It will enable users to discover and compare courses on interactive way
-        through web application. This “one click” app will save time and provide very useful information to interested
-        parties.
-</p>
-        </mat-card>
-
-        <mat-card class="transparent" style="margin-top: 20px;">
-                     <img src="http://www.fer.unizg.hr/images/site_5/Ivana.jpg" style="border-radius: 50%" width="60px"
-             height="60px">
-        </mat-card>
-</div>
-
-<div class="col-md-4">
+    <div class="col-md-4">
         <mat-card class="transparent">
-    <div>
 
-        <h1 style="margin:30px;color:rgb(47, 75, 131);">Our Motivation</h1>
-<p style="text-align: justify">
-                Csyllabus is part of a set of projects purposed in the <a
-                    href="http://score-contest.org/2018/projects/csyllabus.php"> SCORE </a> competition 2018 edition.
-                The SCORE Contest is aimed at promoting and fostering software engineering in universities worldwide.
-                Student teams from all over the world participate in a competition for students from undergraduate to master's
-                level.
-                Each team will develop a software project chosen from a list of projects proposed and sponsored by program
-                committee members.
-                In order to accommodate a wide range of academic calendars, the SCORE 2018 Contest will run from May 2017 to
-                January 2018.
-                Finalist teams will be invited to <a href="https://conf.researchr.org/home/icse-2018/">ICSE</a> 2018 in
-                Gothenburg, Sweden.
+            <h1 style="margin:30px;color:rgb(47, 75, 131);">Our Vision</h1>
+            <p style="text-align: justify">
+                Our application will be used to help the students choose courses. For that, the student will be able to choose
+                his home university and if he wants, his wanted destination (via city, country or faculty name), plus the
+                courses he wants to select. He will be able to select them by typing keywords that represent the courses. Then
+                the application will analyze his input and match it with input data from syllabuses to find him suitable
+                faculties and courses.
+                Our vision besides data gathering and analysis, is to add a community so that students can see feedback from
+                previous students at the proposed universities and maybe contact them to have more informations. But also we
+                would like to introduce to the student what he can see in the chosen city, the night life, the students’
+                occupations, etc
             </p>
-    </div>
         </mat-card>
-</div>
+    </div>
 
-<hr>
-<h2 style="margin:30px;color:rgb(47, 75, 131);">Our Team</h2>
-<div class="ourteam">
-    <div class="rowback">
-        <div class="row1">
-            <div class="personname">
+    <div class="col-md-4 " style="margin-top: -100px;">
+        <mat-card class="transparent">
+            <h1 style="margin:30px;color:rgb(47, 75, 131);">Intro</h1>
+            <p style="text-align: justify">
+
+                CSyllabus is imagined as a web platform which should ease up process of finding and comparing
+                courses on domestic and foreign faculties. It will enable users to discover and compare courses on interactive way
+                through web application. This “one click” app will save time and provide very useful information to interested
+                parties.
+            </p>
+        </mat-card>
+
+
+    </div>
+
+    <div class="col-md-4">
+        <mat-card class="transparent">
+            <div>
+
+                <h1 style="margin:30px;color:rgb(47, 75, 131);">Our Motivation</h1>
+                <p style="text-align: justify">
+                    Csyllabus is part of a set of projects purposed in the <a
+                        href="http://score-contest.org/2018/projects/csyllabus.php"> SCORE </a> competition 2018 edition.
+                    The SCORE Contest is aimed at promoting and fostering software engineering in universities worldwide.
+                    Student teams from all over the world participate in a competition for students from undergraduate to master's
+                    level.
+                    Each team will develop a software project chosen from a list of projects proposed and sponsored by program
+                    committee members.
+                    In order to accommodate a wide range of academic calendars, the SCORE 2018 Contest will run from May 2017 to
+                    January 2018.
+                    Finalist teams will be invited to <a href="https://conf.researchr.org/home/icse-2018/">ICSE</a> 2018 in
+                    Gothenburg, Sweden.
+                </p>
+            </div>
+        </mat-card>
+    </div>
+
+
+
+    <div class="col-md-4">
+        <mat-card class="transparent">
+
+            <div class="personname" style="background-image: url('../../../images/matej-vukosav.jpg');">
                 <h2>Matej Vukosav</h2>
             </div>
-            <img src="http://www.fer.unizg.hr/images/50028139/matej-vukosav.jpg" style="border-radius: 50%;" width="150px"
+            <img src="logo.jpg" style="border-radius: 50%;" width="150px"
                  height="150px">
             <div class="content">
                 <h3 style="text-align:center">Product Owner</h3>
@@ -80,11 +76,15 @@
                 </p>
                 <p><b>E-mail:</b> matej.vukosav@fer.hr</p>
             </div>
-        </div>
-        <div class="row1">
-            <div>
+        </mat-card>
+    </div>
+
+    <div class="col-md-4">
+        <mat-card class="transparent">
+            <div class="personname">
                 <h2>Thomas Benetti</h2>
             </div>
+
             <img src="http://www.fer.unizg.hr/images/50028139/IMG_8461.JPG" style="border-radius: 50%;" width="150px"
                  height="150px">
             <div class="content">
@@ -97,9 +97,13 @@
                 </p>
                 <p><b>E-mail:</b> thomas.benetti@mail.polimi.it</p>
             </div>
-        </div>
-        <div class="row1">
-            <div>
+        </mat-card>
+    </div>
+
+
+    <div class="col-md-4">
+        <mat-card class="transparent">
+            <div class="personname">
                 <h2>Emanuel Guberovic</h2>
             </div>
             <img src="http://www.fer.unizg.hr/images/50028139/guber.jpg" style="border-radius: 50%" width="150px"
@@ -114,27 +118,31 @@
                 </p>
                 <p><b>E-mail:</b> emanuel.guberovic@fer.hr</p>
             </div>
-        </div>
+        </mat-card>
     </div>
-    <div class="row2">
-        <div>
-            <h2>Zvonimir Relja</h2>
-        </div>
-        <img src="http://www.fer.unizg.hr/images/50028139/profilna.jpg" style="border-radius: 50%" width="150px"
-             height="150px">
-        <div class="content">
-            <h3 style="text-align:center">Backend Developer</h3>
-            <p style="text-align:justify">
-                23 years old from Croatia.
-                Currently on second year of Masters in Computer Engineering at FER, Zagreb.
-                Skills and interests: Fullstack web dev. and embedded engineering enthusiast.
-                Hobbies: Eating food. All of it.
-            </p>
-            <p><b>E-mail:</b> zvonimir.relja@fer.hr</p>
-        </div>
+
+    <div class="col-md-4">
+        <mat-card class="transparent">
+            <div class="personname">
+                <h2>Zvonimir Relja</h2>
+            </div>
+            <img src="http://www.fer.unizg.hr/images/50028139/profilna.jpg" style="border-radius: 50%" width="150px"
+                 height="150px">
+            <div class="content">
+                <h3 style="text-align:center">Backend Developer</h3>
+                <p style="text-align:justify">
+                    23 years old from Croatia.
+                    Currently on second year of Masters in Computer Engineering at FER, Zagreb.
+                    Skills and interests: Fullstack web dev. and embedded engineering enthusiast.
+                    Hobbies: Eating food. All of it.
+                </p>
+                <p><b>E-mail:</b> zvonimir.relja@fer.hr</p>
+            </div>
+        </mat-card>
     </div>
-    <div class="row2">
-        <div>
+    <div class="col-md-4">
+        <mat-card class="transparent">
+            <div class="personname">
             <h2>Filip Turčinović </h2>
         </div>
         <img src="http://www.fer.unizg.hr/images/50028139/filip.jpg" style="border-radius: 50%" width="150px"
@@ -148,9 +156,11 @@
             </p>
             <p><b>E-mail:</b> filip.turcinovic@fer.hr</p>
         </div>
+        </mat-card>
     </div>
-    <div class="row2">
-        <div>
+    <div class="col-md-4">
+        <mat-card class="transparent">
+            <div class="personname">
             <h2>Adrien Roques</h2>
         </div>
         <img src="http://www.fer.unizg.hr/images/50028139/Adrien%20Roques.png" style="border-radius: 50%" width="150px"
@@ -163,9 +173,11 @@
             </p>
             <p><b>E-mail:</b> adrien.roques.31@outlook.fr</p>
         </div>
+        </mat-card>
     </div>
-    <div class="row3">
-        <div>
+    <div class="col-md-4">
+        <mat-card class="transparent">
+            <div class="personname">
             <h2>Sebastian Mayoral</h2>
         </div>
         <img src="http://www.fer.unizg.hr/images/50028139/indice(1).png" style="border-radius: 50%" width="150px"
@@ -179,9 +191,11 @@
             </p>
             <p><b>E-mail:</b> obandomayoral@gmail.com</p>
         </div>
+        </mat-card>
     </div>
-    <div class="row3">
-        <div>
+    <div class="col-md-4">
+        <mat-card class="transparent">
+            <div class="personname">
             <h2>Ivana Bosnić</h2>
         </div>
         <img src="http://www.fer.unizg.hr/images/site_5/Ivana.jpg" style="border-radius: 50%" width="150px"
@@ -193,9 +207,11 @@
             </p>
             <p><b>E-mail:</b> ivana.bosnic@fer.hr</p>
         </div>
+        </mat-card>
     </div>
-    <div class="row3">
-        <div>
+    <div class="col-md-4">
+        <mat-card class="transparent">
+            <div class="personname">
             <h2>Raffaela Mirandola</h2>
         </div>
         <img src="http://www.fer.unizg.hr/images/site_5/Raffaela.jpg" style="border-radius: 50%" width="150px"
@@ -209,6 +225,7 @@
             </p>
             <p><b>E-mail:</b> raffaela.mirandola@polimi.it</p>
         </div>
+        </mat-card>
     </div>
-</div>
+
 
