--- a/frontend/csyllabus/src/app/components/about/about.component.css
+++ b/frontend/csyllabus/src/app/components/about/about.component.css
@@ -85,9 +85,7 @@ h2{
         margin-left:10px;
         margin-right:10px;
     }
-    .rowback{
-        background-color: rgba(242, 242, 242, 0.453) !important;
-    }
+
 }
 hr {
     border-top: 3px solid rgb(116,153,227);
@@ -101,6 +99,7 @@ hr {
   }
 
 .intro-content{
+  height: 100em;
   padding-top:150px;
   background: url('../../../images/fer.jpg') no-repeat center center fixed;
         -webkit-background-size: cover;
@@ -111,5 +110,5 @@ hr {
 }
 
 .transparent {
-  background-color: rgba(255,255,255,0.95);
+  background-color: rgba(255,255,255,0.90);
 }
