--- a/frontend/csyllabus/src/app/components/about/about.component.html
+++ b/frontend/csyllabus/src/app/components/about/about.component.html
@@ -61,7 +61,7 @@
     <div class="col-md-4">
         <mat-card class="transparent">
 
-            <div class="personname" style="background-image: url('../../../images/matej-vukosav.jpg');">
+            <div class="personname" style="background-image: url('../../../images/matej-vukosav.jpg') no-repeat center center fixed;;">
                 <h2>Matej Vukosav</h2>
             </div>
             <img src="logo.jpg" style="border-radius: 50%;" width="150px"
@@ -85,7 +85,7 @@
                 <h2>Thomas Benetti</h2>
             </div>
 
-            <img src="http://www.fer.unizg.hr/images/50028139/IMG_8461.JPG" style="border-radius: 50%;" width="150px"
+            <img src="../../../images/thomas.JPG" style="border-radius: 50%;" width="150px"
                  height="150px">
             <div class="content">
                 <h3 style="text-align:center">Scrum Master</h3>
