--- a/frontend/csyllabus/src/app/components/documentation/documentation.component.html
+++ b/frontend/csyllabus/src/app/components/documentation/documentation.component.html
@@ -1,1 +1,151 @@
-e
+<div id="page-wrapper">
+
+
+
+    <section id="banner">
+        <div class="inner">
+            <p>The Csyllabus Developer Center</p>
+            <h1>Connect your course data with us</h1>
+            <ul class="actions">
+               <li> <a class="button big special scrolly" [routerLink]="['/documentation']" fragment="one" (click)="onAnchorClick()">Start</a>
+</li>
+            </ul>
+        </div>
+    </section>
+
+    <section id="one" class="wrapper style2">
+        <div class="inner">
+            <section class="spotlights">
+                <article>
+                    <header class="major">
+                        <p>Why</p>
+                        <h2>Big community</h2>
+                    </header>
+                    <p>The Csyllabus community is rapidly growing! Students are coming at Csyllabus to search and explore courses they want to enrol. Don't miss out! Have your Faculty syllabus listed in our app now!</p>
+                    <ul class="actions">
+                        <li><a href="/sandbox" class="button">More</a></li>
+                    </ul>
+                </article>
+                <article>
+                    <header class="major">
+                        <p>Connect</p>
+                        <h2>IOTA Core</h2>
+                    </header>
+                    <p>Install the IOTA Core client, which gives you more freedom in what you can do. Here you will find concrete install instructions for your OS.</p>
+                    <ul class="actions">
+                        <li><a href="#" class="button">More</a></li>
+                    </ul>
+                </article>
+            </section>
+        </div>
+    </section>
+
+    <section id="two" class="wrapper style1 special">
+        <div class="inner">
+            <ul class="features">
+                <li>
+                    <span class="icon major fa-money"></span>
+                    <h4>Machine Payments</h4>
+                    <p>Micro-payments without any fees. All powered by the IOTA Tangle.</p>
+                </li>
+                <li>
+                    <span class="icon major fa-shield"></span>
+                    <h4>Data Security</h4>
+                    <p>Your data encrypted and made tamper-proof by a strong network.</p>
+                </li>
+                <li>
+                    <span class="icon major fa-cog"></span>
+                    <h4>Smart Contracts</h4>
+                    <p>Automation of your processes (coming soon).</p>
+                </li>
+                <li>
+                    <span class="icon major fa-plus-circle"></span>
+                    <h4>Modules</h4>
+                    <p>Through an extensible core, you can create and use a variety of modules.</p>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <section id="three" class="wrapper">
+        <div class="inner">
+            <header class="major alt">
+                <p>Read</p>
+                <h2>Developer Tutorials</h2>
+            </header>
+            <section class="posts">
+                <article>
+                    <span class="image"><img src="images/pic01.jpg" alt=""></span>
+                    <div class="content">
+                        <p>Written and maintained by our community of developers, here you will find a variety of different tutorials that help you get started in developing IOTA-based applications. Whether you're a beginner or experienced, this is the perfect place to get started and even get some inspiration for your next Internet of Things Application.</p>
+                        <ul class="actions">
+                            <li><a href="#" class="button">More</a></li>
+                        </ul>
+                    </div>
+                </article>
+            </section>
+        </div>
+    </section>
+
+    <section id="four" class="wrapper style2 alt">
+        <div class="inner">
+            <header class="major">
+                <p>Libraries</p>
+                <h2>Utilize one of our libraries in your favorite language.</h2>
+            </header>
+            <section class="timeline">
+                <section>
+                    <header>
+                        <p>Official</p>
+                        <h4>Javascript Library</h4>
+                    </header>
+                    <span class="image"><img src="images/js.png" alt=""></span>
+                    <div class="content">
+                        <p>The official Javascript library makes it possible to use all IOTA functionality either in the browser or in a NodeJS Application. Follow the documentation for an introduction to the library with concrete examples.</p>
+                        <ul class="actions">
+                            <li><a href="/javascript-library" class="button">More</a></li>
+                        </ul>
+                    </div>
+                </section>
+                <section>
+                    <header>
+                        <p>Official</p>
+                        <h4>Python Library</h4>
+                    </header>
+                    <span class="image"><img src="images/python.png" alt=""></span>
+                    <div class="content">
+                        <p>With the Python library you can easily develop your first IOTA application for IoT. Works for Python 2 and 3.</p>
+                        <ul class="actions">
+                            <li><a href="#" class="button">More</a></li>
+                        </ul>
+                    </div>
+                </section>
+            </section>
+        </div>
+    </section>
+
+    <footer id="footer">
+        <div class="inner">
+            <ul class="features">
+                <li class="footer_help">
+                    <a href="http://slack.iotatoken.com"><img class="logo" src="./images/slack.png"></a>
+                    <h4>Slack</h4>
+                    <p>More than 1500 members strong. Get direct support in our Slack channels.</p>
+                </li>
+                <li class="footer_help">
+                    <a href="https://forum.iotatoken.com"><img class="logo" src="./images/discourse.png"></a>
+                    <h4>Forum</h4>
+                    <p>Find existing questions or ask a specific question you have in our Forum.</p>
+                </li>
+                <li class="footer_help">
+                    <a href="https://reddit.com/r/iota"><img class="logo" src="./images/reddit.png"></a>
+                    <h4>Reddit</h4>
+                    <p>In case you like Reddit to get support, ask away (hopefully we'll get Stackoverflow soon).</p>
+                </li>
+            </ul>
+        </div>
+        <div class="copyright">
+            © IOTA Foundation. All rights reserved.
+        </div>
+    </footer>
+</div>
