--- a/frontend/csyllabus/src/app/core/explorer/explorer.component.css
+++ b/frontend/csyllabus/src/app/core/explorer/explorer.component.css
@@ -1,10 +1,7 @@
 .form {
     margin: 20px;
   }
-.input {
-    width: 100%;
-    max-width: 90%;
-  }
+
 .check {
     margin-top:10px;
     margin-bottom: 10px;
@@ -45,11 +42,14 @@
 }
 
 .custom-card-title{
-  font-size: 24px;
+  font-size: 22px;
   float: left;
-  margin-top: 80px;
+  margin-bottom: 0;
+
   color: white;
   background-color: rgb(85,118,184);
   padding: 6px 30px;
   position:relative;
+  text-align: left;
+  z-index: 1;
 }
