--- a/frontend/csyllabus/src/styles.css
+++ b/frontend/csyllabus/src/styles.css
@@ -3,6 +3,20 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300');
 @import url('https://fonts.googleapis.com/css?family=Inconsolata:400,700');
 
+h1 {
+  font-family: 'Inconsolata', serif;
+  color: white;
+  margin-bottom: 0;
+  margin-top: 0;
+  font-weight: bold;
+}
+
+h2 {
+  font-family: 'Roboto Condensed', sans-serif;
+  margin-top: 0;
+  color: white;
+}
+
 * {
     box-sizing: border-box;
 }
@@ -45,7 +59,7 @@
 @media (max-width: 567px) {
   .container {
     width: 95% !important;
-    max-width: 90% !important;
+    max-width: 95% !important;
   }
 }
 
@@ -108,3 +122,14 @@
   padding: 0 !important;
 }
 
+.input {
+  width: 500px;
+  max-width: 500px;
+}
+
+@media only screen and (max-width: 768px) {
+    .input {
+    width: 100%;
+    max-width: 100%;
+  }
+}
